--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     
     <section class="home">
         <div class="background-main">
+                <!-- <img src="Images/Hero_Desktop_TraeYoung.png" alt=""> -->
                 <div class="welcome-image">
                     <img src="Images/Headline_Mobile.png" alt="">
                 </div>
